--- a/res/layout/confirm_data.xml
+++ b/res/layout/confirm_data.xml
@@ -3,296 +3,202 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-    <android.support.v7.widget.GridLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_margin="3dp"
-        android:useDefaultMargins="true"
-        app:columnCount="4"
-        app:rowCount="12" >
+        android:orientation="vertical"
+        android:useDefaultMargins="true" >
 
         <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_margin="5dp"
-            app:layout_columnSpan="3"
-            app:layout_gravity="fill_horizontal"
-            app:layout_row="0"
+            android:background="@color/Red"
             android:gravity="center"
+            android:padding="10dp"
             android:text="@string/dieschedule"
             android:textSize="25sp"
             android:textStyle="bold" />
 
         <!-- INLET -->
 
-        <LinearLayout
-            style="@style/leftColumnLayout"
-            app:layout_column="0"
-            app:layout_row="1"
-            app:layout_gravity="fill_horizontal"
-            android:orientation="vertical" >
+        <LinearLayout style="@style/form_layout" >
 
             <TextView
                 style="@style/inputLabel"
-                android:gravity="bottom|right"
                 android:padding="0dp"
                 android:text="@string/inlet" />
 
             <TextView
+                android:id="@+id/inlet"
+                style="@style/inputNumbers" />
+
+            <TextView
                 style="@style/measure"
-                android:gravity="top|right"
                 android:padding="0dp"
                 android:text="mm" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/inlet"
-            style="@style/inputNumbers"
-            app:layout_column="1"
-            app:layout_gravity="fill"
-            app:layout_row="1"
-           />
-
         <!-- OUTLET -->
 
-        <LinearLayout
-            style="@style/leftColumnLayout"
-            app:layout_column="0"
-            app:layout_row="2"
-            app:layout_gravity="fill_horizontal"
-            android:orientation="vertical" >
+        <LinearLayout style="@style/form_layout" >
 
             <TextView
                 style="@style/inputLabel"
                 android:text="@string/outlet" />
 
             <TextView
+                android:id="@+id/outlet"
+                style="@style/inputNumbers" />
+
+            <TextView
                 style="@style/measure"
                 android:text="mm" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/outlet"
-            style="@style/inputNumbers"
-            app:layout_column="1"
-            app:layout_gravity="fill"
-            app:layout_row="2" />
-
         <!-- NOFDIES -->
 
-        <LinearLayout
-            style="@style/leftColumnLayout"
-            app:layout_column="0"
-            app:layout_row="3"
-            app:layout_gravity="fill_horizontal"
-            android:orientation="vertical" >
+        <LinearLayout style="@style/form_layout" >
 
             <TextView
                 style="@style/inputLabel"
                 android:text="@string/n_of_dies" />
 
             <TextView
+                android:id="@+id/n_of_dies"
+                style="@style/inputNumbers" />
+
+            <TextView
                 style="@style/measure"
                 android:text="N°" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/n_of_dies"
-            style="@style/inputNumbers"
-            app:layout_column="1"
-            app:layout_gravity="fill"
-            app:layout_row="3" />
-
         <!-- CarbonContent -->
 
-        <LinearLayout
-            style="@style/leftColumnLayout"
-            app:layout_column="0"
-            app:layout_row="4"
-            app:layout_gravity="fill_horizontal"
-            android:orientation="vertical" >
+        <LinearLayout style="@style/form_layout" >
 
             <TextView
                 style="@style/inputLabel"
                 android:text="@string/carbon_content" />
 
             <TextView
+                android:id="@+id/carbon_content"
+                style="@style/inputNumbers"
+                />
+
+            <TextView
                 style="@style/measure"
                 android:text="#" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/carbon_content"
-            style="@style/inputNumbers"
-            android:layout_width="wrap_content"
-            app:layout_column="1"
-            app:layout_gravity="fill"
-            app:layout_row="4" />
-
         <!-- TargetSpeed -->
 
-        <LinearLayout
-            style="@style/leftColumnLayout"
-            app:layout_column="0"
-            app:layout_row="5"
-            app:layout_gravity="fill_horizontal"
-            android:orientation="vertical" >
+        <LinearLayout style="@style/form_layout" >
 
             <TextView
                 style="@style/inputLabel"
                 android:text="@string/target_speed" />
 
             <TextView
+                android:id="@+id/targetspeed"
+                style="@style/inputNumbers" />
+
+            <TextView
                 style="@style/measure"
                 android:text="m/s" />
         </LinearLayout>
-            <TextView
-                android:id="@+id/targetspeed"
-                style="@style/inputNumbers"
-                app:layout_column="1"
-                app:layout_gravity="fill"
-                app:layout_row="5"
-                />
-        
 
         <!-- SPEED WIRE INLET -->
 
-        <LinearLayout
-            style="@style/leftColumnLayout"
-            app:layout_column="0"
-            app:layout_row="6"
-            app:layout_gravity="fill_horizontal"
-            android:orientation="vertical" >
+        <LinearLayout style="@style/form_layout" >
 
             <TextView
                 style="@style/confirmValue"
                 android:text="@string/speed_wire_inlet" />
 
             <TextView
+                android:id="@+id/speedwireinlet"
+                style="@style/inputNumbers" />
+
+            <TextView
                 style="@style/measure"
                 android:text="m/s" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/speedwireinlet"
-            style="@style/inputNumbers"
-            app:layout_column="1"
-            app:layout_gravity="fill_horizontal"
-            app:layout_row="6" />
-
         <!-- AVERAGE REDUCTION -->
 
-        <LinearLayout
-            style="@style/leftColumnLayout"
-            app:layout_column="0"
-            app:layout_row="7"
-            app:layout_gravity="fill_horizontal"
-            android:orientation="vertical" >
+        <LinearLayout style="@style/form_layout" >
 
             <TextView
                 style="@style/confirmValue"
                 android:text="@string/average_reduction" />
 
             <TextView
+                android:id="@+id/averagereduction"
+                style="@style/inputNumbers" />
+
+            <TextView
                 style="@style/measure"
                 android:text="%" />
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/averagereduction"
-            style="@style/inputNumbers"
-            app:layout_column="1"
-            app:layout_gravity="fill_horizontal"
-            app:layout_row="7" />
-
         <!-- TOTAL REDUCTION -->
 
-        <LinearLayout
-            style="@style/leftColumnLayout"
-            app:layout_column="0"
-            app:layout_row="8"
-            app:layout_gravity="fill_horizontal"
-            android:orientation="vertical" >
+        <LinearLayout style="@style/form_layout" >
 
             <TextView
                 style="@style/confirmValue"
                 android:text="@string/total_reduction" />
 
             <TextView
+                android:id="@+id/totalreduction"
+                style="@style/inputNumbers" />
+
+            <TextView
                 style="@style/measure"
                 android:text="%" />
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/totalreduction"
-            style="@style/inputNumbers"
-            app:layout_column="1"
-            app:layout_gravity="fill_horizontal"
-            app:layout_row="8" />
-
         <!-- INLET T/S -->
 
-        <LinearLayout
-            style="@style/leftColumnLayout"
-            app:layout_column="0"
-            app:layout_row="9"
-            app:layout_gravity="fill_horizontal"
-            android:orientation="vertical" >
+        <LinearLayout style="@style/form_layout" >
 
             <TextView
                 style="@style/confirmValue"
                 android:text="@string/inlet_ts" />
 
             <TextView
+                android:id="@+id/inletts"
+                style="@style/inputNumbers" />
+
+            <TextView
                 style="@style/measure"
                 android:text="N/mm^2" />
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/inletts"
-            style="@style/inputNumbers"
-            app:layout_column="1"
-            app:layout_gravity="fill_horizontal"
-            app:layout_row="9" />
-
         <!-- OUTLET T/S -->
 
-        <LinearLayout
-            style="@style/leftColumnLayout"
-            app:layout_column="0"
-            app:layout_row="10"
-            app:layout_gravity="fill_horizontal"
-            android:orientation="vertical" >
+        <LinearLayout style="@style/form_layout" >
 
             <TextView
                 style="@style/confirmValue"
                 android:text="@string/outlet_ts" />
 
             <TextView
+                android:id="@+id/outletts"
+                style="@style/inputNumbers" />
+
+            <TextView
                 style="@style/measure"
                 android:text="N/mm^2" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/outletts"
-            style="@style/inputNumbers"
-            app:layout_column="1"
-            app:layout_gravity="fill"
-            app:layout_row="10" />
-
-        <android.support.v7.widget.Space
-            app:layout_column="3"
-            app:layout_gravity="fill"
-            app:layout_row="0"
-            app:layout_rowSpan="12" />
-
         <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/btnCalculate"
-            app:layout_column="1"
-            app:layout_gravity="fill_horizontal"
-            app:layout_row="11"
             android:ems="5"
             android:text="@string/calculate" />
-    </android.support.v7.widget.GridLayout>
+    </LinearLayout>
 
 </ScrollView>
