--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -74,7 +74,9 @@
      <!-- TABLE LAYOUT STYLES -->
      
      <style name="headerColumn">
-         <item name="android:width">100dp</item>
+         <item name="android:minWidth">80dp</item>
+         <item name="android:padding">2dp</item>
+         <item name="android:layout_width">wrap_content</item>
          <item name="android:textSize">16sp</item>
          <item name="android:layout_marginLeft">1dp</item>
          <item name="android:layout_marginRight">1dp</item>
@@ -85,23 +87,25 @@
          <item name="android:gravity">center</item>
          <item name="android:background">@color/Red</item>
          <item name="android:textColor">@color/White</item>
+     	 <item name="android:layout_width">wrap_content</item>	
+     	 <item name="android:layout_height">wrap_content</item>
      </style>
      
-     <style name="headerColumn.tableHeader.headerDoubleColumn">
-         <item name="android:width">200dp</item>
-     </style>
-             
      <style name="headerColumn.tableUOM">
-          <item name="android:background">@color/Red2</item>
+          <item name="android:background">@color/Red</item>
          <item name="android:textColor">@color/Grey3</item>
          <item name="android:gravity">center</item>
           <item name="android:textSize">16sp</item>
+           <item name="android:layout_width">match_parent</item>	
+     	 <item name="android:layout_height">wrap_content</item>
      </style>
      
      <style name="headerColumn.tableAboveValue">
           <item name="android:background">@color/Red</item>
          <item name="android:textColor">@color/White</item>
          <item name="android:gravity">center</item>
+          <item name="android:layout_width">wrap_content</item>	
+     	 <item name="android:layout_height">wrap_content</item>
      </style>
      
      
